--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@ignite-ui/react": "^2.2.4",
     "@types/node": "20.2.3",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@prisma/client": "^4.14.1",
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "prisma": "^4.15.0"
   }
 }
