--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ignite-ui/react": "^2.2.4",
     "@types/node": "20.2.3",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.4",
     "next": "^13.4.4",
