--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@ignite-ui/react": "^2.2.4",
+    "@tanstack/react-query": "^4.29.12",
     "@types/node": "20.2.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
