--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.8",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.4",
+    "googleapis": "^118.0.0",
     "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
